--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuejs-community/vue-filter-date-format": "^1.4.0",
+    "buefy": "^0.8.20",
+    "cleave.js": "^1.6.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.4",
+    "vue2-filters": "^0.11.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
