--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buefy": "^0.8.20",
     "cleave.js": "^1.6.0",
     "core-js": "^3.6.5",
+    "vee-validate": "^3.3.7",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
     "vue2-filters": "^0.11.0"
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
