--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buefy": "^0.8.20",
     "cleave.js": "^1.6.0",
     "core-js": "^3.6.5",
+    "firebase": "^7.16.1",
     "vee-validate": "^3.3.7",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
